# rust-esp32-std-demo

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.cargo/: config.toml
flasher/: Cargo.toml
flasher/src/: main.rs
messages/: Cargo.toml
messages/src/: lib.rs
src/: main.rs  simple_ota.rs  uart_update.rs
