[workspace]
members = [
    "messages",
    "flasher",
]

[package]
name = "rust-ota-demo"
authors = ["ivmarkov", "Maxime Borges","MartinBroers"]
version = "0.2.0"
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo app that allows OTA update via UART"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
embedded-hal = "0.2"
embedded-svc = "0.23"
esp-idf-hal = {version = "0.40"}
esp-idf-svc = { version = "0.44", features = ["experimental"] }
esp-idf-sys = { version = "0.32", features = ["binstart"] }
messages = { path = "messages" }
smlang = "0.5.1"

[build-dependencies]
embuild = "0.29"
anyhow = "1"

[patch.crates-io]
# https://codesti.com/issue/ivmarkov/rust-esp32-std-demo/123
embedded-io = { git = "https://github.com/embassy-rs/embedded-io.git", tag = "v0.3.0"}
