[package]
name = "messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { git = "https://github.com/jamesmunns/postcard.git", tag = "v1.0.0-alpha.1", features = ["alloc"] }
serde = "1.0"
crc = "3.0"
heapless = "0.7"
anyhow = "1.0"